# WINGS-GMTI

./: .gitignore  CMakeLists.txt  CMakeLists_g.txt  DBS_GMTI融合修改记录.md  DBS_parameter.xml  GMTI_PIPE_INTEGRATION_PLAN.md  GMTI_result_show_CPP.m  GMTI_return_EN.m  GMTI新系统仿真数据生成三级实施方案与周计划_v3.0.docx  GMTI新系统仿真数据生成完整实施方案与周计划_v2.1.docx  GPU_OPTIMIZATION_REPORT.md  scan_GMTI_parameter.xml  stage3_config.json  targets.json  temp_config.xml  temp_config_61beam.xml  主控软件-算法软件通信协议V1.2.md  主控软件-算法软件通信协议V1.3.docx  回波数据格式167_260509.md  规范.md
auth/hardware_bind_flow/core/: binding.cpp  binding.h  binding_config.h
auth/hardware_bind_flow/gate/: checkpoint_codec.cpp  checkpoint_codec.h  security_gate.cpp  security_gate.h
auth/shared/crypto/: sm3.cpp  sm3.h
auth/shared/hardware/: hardware.cpp  hardware.h
include/: GMTIProcessor.hpp  TrackManager.hpp  config_structs.hpp  motion_comp.hpp  p38_refit_utils.hpp  pesudoTargetGen.hpp  rangeCompress.hpp  rotation_xy.hpp  runtime_diagnostics.hpp  trackModule.hpp  transposeFFT.hpp  trig_lut.hpp  trig_lut_device.cuh  unwrap_fd.hpp
include/dbs/: DbsFusion.hpp  DbsFusionTypes.hpp  DbsIO.hpp  DbsStitcher.hpp  DbsTypes.hpp  NewProtocolLayout.hpp  NewProtocolReader.hpp  PerfLogger.hpp  rotation_xy.hpp  stitcher_kernel.hpp  stitcher_kernel_texarray.hpp
include/dbs/geo/: GaussProj.hpp
include/geo/: geoProj.hpp
include/pipe/: MainCtrl.h  PipeRW.h  PipeStruDef.h
outputs/stage1/algorithm_result/: GMTI01.txt
outputs/stage1/config/: temp_config_stage1_newsystem.xml
outputs/stage1/debug/: beam_angle_table.csv  range_resize_stats.csv
outputs/stage1/reports/: algorithm_integration_report.md  data_statistics_report.md  parameter_audit.md  range_resize_validation.md
outputs/stage1_poscheck/config/: temp_config_stage1_newsystem.xml
outputs/stage1_poscheck/debug/: old_to_new_beam_map.csv  pulse_resample_map_normalized.csv  pulse_resample_map_physical_time.csv  range_resize_stats.csv
outputs/stage1_poscheck/reports/: algorithm_integration_report.md  data_statistics_report.md  parameter_audit.json
outputs/stage1_target/config/: temp_config_stage1_target.xml
outputs/stage1_target/reports/: target_injection_report.md
outputs/stage1_target/truth/: truth_beam_summary.csv
outputs/stage1_target_smoke/config/: temp_config_stage1_target.xml
outputs/stage1_target_smoke/reports/: target_injection_report.md
outputs/stage1_target_smoke/truth/: truth_pulse.csv
outputs/stage1_wrap/algorithm_result/: GMTI01.txt  track_points.csv
scripts/: TRACK_VISUALIZATION_README.md  calibrate_single_point_bin.py  calibrate_single_point_bin_simplified.py  check_stage2_geometry_consistency.py  compare_stage2_fusion_localization.py  p25_one_click.sh  parse_gmti_bin.py  plot_pc_profile.py  plot_track_points.py  run_motion_comp_stage2_matrix.sh  run_stage2_one_click_test.sh  visualize_track_manager.py
shmdemo/: shared_memory_ringbuffer_interface_doc.docx
shmdemo/demo/: RingBuffer.h  receiver  receiver.cpp  receiver_speed  receiver_speed_test.cpp  sender  sender.cpp  sender_speed  sender_speed_test.cpp
simulator/common/: SimulationGeometry.cpp  SimulationGeometry.h  beam_pattern.cpp  beam_pattern.h  channel_phase_model.cpp  channel_phase_model.h  lfm_echo_generator.cpp  lfm_echo_generator.h  radar_geometry.cpp  radar_geometry.h  truth_writer.cpp  truth_writer.h
simulator/reporting/: generate_simulation_report.py
simulator/scenarios/: beam50_two_targets_continuous.run.json  beam50_two_targets_full.run.json
simulator/stage1_background_sim/: simulate_stage1_main.cpp  stage1_beam_mapper.cpp  stage1_beam_mapper.h  stage1_config.cpp  stage1_config.h  stage1_data_reader.cpp  stage1_data_reader.h  stage1_pulse_resampler.cpp  stage1_pulse_resampler.h  stage1_range_resizer.cpp  stage1_range_resizer.h  stage1_validator.cpp  stage1_validator.h  stage1_writer.cpp  stage1_writer.h
simulator/stage2_statistical_sim/: simulate_stage2_main.cpp  stage2_config.cpp  stage2_config.h  stage2_lfm_forward.cpp  stage2_lfm_forward.h  stage2_scatterer.h  stage2_scene_generator.cpp  stage2_scene_generator.h  stage2_validator.cpp  stage2_validator.h
simulator/stage3_sar_scene_sim/: sar_georef.cpp  sar_georef.h  sar_image_reader.cpp  sar_image_reader.h  sar_radiometric_normalizer.cpp  sar_radiometric_normalizer.h  sar_scatterer_extractor.cpp  sar_scatterer_extractor.h  sar_scatterer_sampler.cpp  sar_scatterer_sampler.h  sar_scene_forward.cpp  sar_scene_forward.h  simulate_stage3_main.cpp  stage3_config.cpp  stage3_config.h  stage3_validator.cpp  stage3_validator.h
simulator/target_injection/: beam_visibility.cpp  beam_visibility.h  channel_phase_model.cpp  channel_phase_model.h  inject_target_main.cpp  lfm_echo_generator.cpp  lfm_echo_generator.h  radar_geometry.cpp  radar_geometry.h  target_common.cpp  target_common.h  target_config.cpp  target_config.h  target_motion_model.cpp  target_motion_model.h  truth_writer.cpp  truth_writer.h
src/: NewProtocolReader.cpp  TrackManager.cpp  alignFFTAndDBS.cpp  clutter_CSI.cpp  computeDynamicSupportDomain.cpp  detectAndLocating.cpp  extractUTC.cpp  gpu_kernels.cu  kalman_track.cpp  loadXML.cpp  main.cpp  makeLists.cpp  pesudoTarget_Gen.cpp  processOnePeriod.cpp  processPeriodsParallel.cpp  pulseCompression.cpp  rangeCompress_cu.cu  rangeCompress_device.cu  rg_correct.cpp  runtime_diagnostics.cpp  trackModule.cpp  trig_lut.cpp  trig_lut_host_only.cpp  writeresults.cpp
src/dbs/: DbsFusion.cpp  DbsStitcher.cpp  NewProtocolReader.cpp  buildMosaic.cpp  lodepng.cpp  stitcher_kernel.cu  stitcher_kernel_texarray.cu
src/gpu/: gpu_kernels.cu  rangeCompress_cu.cu  rangeCompress_device.cu  trig_lut_device.cu
src/pipe/: MainCtrl.cpp  MainCtrl.h  MyFileStream.h  PipeRW.cpp  main.cpp
src/tools/: compare_range.cpp  convert_old_echo_to_new_format.cpp  generate_reflectivity_forward_echo.cpp  generate_target_profile_echo.cpp  m2_pcie_load.cpp
tests/: range_compression_window_selftest.cpp  track_assignment_selftest.cpp
tex/: main.tex  refs.bib
tools/: TRACK_VISUALIZATION_README.md  dump_newprotocol_header.cpp  visualize_track_manager.py
(+55 files in other folders)
